Fix "creations" part on mobile
Need : refactoring !

--- a/src/sass/home/_creations.scss
+++ b/src/sass/home/_creations.scss
@@ -1,10 +1,20 @@
+@import '~susy';
 @import "../variables";
+@import "../responsive/mixinResponsive";
 
 .grid div {
   color: #333;
 }
-#grid {
+
+section.grid {
+  @include span(12);
   max-width: 300px!important;
+}
+
+@include emix-breakpoint(L) {
+  section.grid {
+    @include span(4);
+  }
 }
 
 .row {
@@ -12,6 +22,13 @@
   position: relative;
   left: 50%;
   transform: translateX(-50%);
+  width: 300px;
+}
+
+@include emix-breakpoint(M) {
+  .row {
+    width: auto;
+  }
 }
 
 
